# tracing-s3

./: Cargo.toml  README.md
src/: config.rs  lib.rs  s3_helpers.rs  testing.rs
src/config/: mod.rs  tracing_s3_config.rs  types.rs
src/layer/: http_log_layer.rs  http_log_layer_subscriber_trait.rs  mod.rs  with_event_from_span.rs
