[package]
name = "tracing-s3"
version = "0.1.4"
edition = "2024"
rust-version = "1.88.0"
authors = ["Ohad Dahan <ohaddahan@gmail.com>"]
license = "MIT"
description = "AWS S3 (Express One) , sending trace logs to S3"
keywords = ["aws", "s3", "express-one-zone", "logs", "tracing"]
categories = ["development-tools"]
repository = "https://github.com/ohaddahan/tracing-s3.git"
documentation = "https://docs.rs/tracing-s3/latest/tracing_s3"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
aws-sdk-s3 = { version = "1.100.0", features = ["rustls", "behavior-version-latest"] }
aws-types = { version = "1.3.7" }
aws-credential-types = { version = "1.2.3", features = ["hardcoded-credentials"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time", "json"] }
tracing-serde = { version = "0.2.0" }
tracing = { version = "0.1.41" }
anyhow = { version = "1.0.98" }
chrono = { version = "0.4.41" }
dotenv = { version = "0.15.0" }
uuid = { version = "1.17.0", features = ["serde", "v4"] }